# windows-98-icons

./: .gitignore  Makefile  README.md  index.html  package.json  pyproject.toml  vite.config.js
.github/workflows/: deploy.yml
scripts/: add_failed_to_db.py  build_complete_project.py  build_db.py  combine_runs.py  embed_db_missing.py  embed_failed_icons.py  embed_single_process.py  process_failed_icons.py  process_icons.py  quick_fix_failed.py  retry_errors.py  scraper.py
src/: App.jsx  config.js  main.jsx
src/components/: IconGrid.jsx  IconModal.jsx
src/services/: database.js  embeddings.js
static/: icons_metadata.json
