[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "windows-98-icons"
version = "0.1.0"
description = "Windows 98 icon scraper and search system"
authors = [{name = "Alex H"}]
requires-python = ">=3.9"
dependencies = [
    "playwright>=1.40.0",
    "openai>=1.3.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "sqlite-vec>=0.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.hatch.build.targets.wheel]
only-include = ["*.py"]

[project.scripts]
scrape-icons = "scraper:main"
process-icons = "process_icons:main"
build-db = "build_db:main"